--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Text Formatting</title>
 </head>
 <body>
-
+  Hello World
   <h1>Text Formatting in HTML</h1>
 
   <!-- Test 2: Wrap the subtitle below, 'A Love Story', in `h2` tags -->
