--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Text Formatting</title>
 </head>
 <body>
-  Hello World
+  <p>Hello World</p>
   
-  Hello Moon
+ <p>Hello Moon</p>
   <h1>Text Formatting in HTML</h1>
 
   <!-- Test 2: Wrap the subtitle below, 'A Love Story', in `h2` tags -->
