Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <p>Hello World</p>
   
  <p>Hello Moon</p>
+ <h1>Title</h1>
+ <h2>Subtitle</h2>
+ <h3>Section header</h3>
+ <h4>Definition/otherimportant sub-list</h4>
+ <h5>probably bold??</h5>
+ <h6>small-fint bolding</h6>
+ 
   <h1>Text Formatting in HTML</h1>
 
   <!-- Test 2: Wrap the subtitle below, 'A Love Story', in `h2` tags -->
