Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Text Formatting</title>
 </head>
 <body>
-  <p>Hello World</p>
+  <p><strong>Hello World</p></strong>
   
  <p>Hello Moon</p>
  <h1>Title</h1>
@@ -14,7 +14,7 @@
  <h3>Section header</h3>
  <h4>Definition/otherimportant sub-list</h4>
  <h5>probably bold??</h5>
- <h6>small-fint bolding</h6>
+ <h6><em>small-font bolding</em></h6>
  
   <h1>Text Formatting in HTML</h1>
 
