Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Text Formatting</title>
 </head>
 <body>
-  <p><strong>Hello World</p></strong>
+  <p><strong>Hello World</strong></p>
   
  <p>Hello Moon</p>
  <h1>Title</h1>
