--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Text Formatting</title>
 </head>
 <body>
+  <!--
   <p><strong>Hello World</strong></p>
   
  <p>Hello Moon</p>
@@ -14,7 +15,7 @@
  <h3>Section header</h3>
  <h4>Definition/otherimportant sub-list</h4>
  <h5>probably bold??</h5>
- <h6><em>small-font bolding</em></h6>
+ <h6><em>small-font bolding</em></h6>   -->
  
   <h1>Text Formatting in HTML</h1>
 
